fix(column-bulk): skip null-named columns instead of emitting a null required field
A null column name (columnName is required in the column-grid response) is now
skipped when building rows, so a malformed bucket is dropped and the remaining
valid columns are returned. This also avoids the sort NPE at the source; the
comparator keeps nullsLast as a backstop. Test updated to assert the null-named
row is dropped.